@@ -33,6 +33,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       wasn't deleted unless a geometry request was made. (backported from 3.0.1)
   b - Fix a race condition for pbs_mom -q, exitstatus was getting overwritten and as a result 
       pbs_server wasn't always re-queued, but were being deleted instead. (backported from 3.0.1)
+  e - Add a configure option --with-tcp-retry-limit to prevent potential 4+ hour hangs on 
+      pbs_server. We recommend --with-tcp-retry-limit=2 (backported from 3.0.1)
 
 2.5.4
   f - added the ability to track gpus. Users set gpus=X in the nodes file for
